# ocaml-project-templates

./: README.md
application/: myapp.opam
application/src/: jbuild  main.ml
application_using_library/: Makefile  README.md  myapp.opam
application_using_library/src/: jbuild  main.ml
