opam-version: "1.2"
maintainer: "Legit Person <toteslegit@example.com>"
authors: [ "Legit Person <toteslegit@example.com>" ]
license: "MIT"
homepage: "https://github.com/imarealperson/myapp"
dev-repo: "https://github.com/imarealperson/myapp.git"
bug-reports: "https://github.com/imarealperson/myapp"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "cmdliner" {>= "1.0.0"}
  "jbuilder" {build & >= "1.0+beta13"}
]
available: [ ocaml-version >= "4.05.0" ]
